# DetailingAuctionPlatform

./: .gitignore  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_account_service.py  0002_company_services.py  0003_company.py  0004_remove_account_service_remove_company_cost_and_more.py  0005_auction_car_alter_company_options_and_more.py  0006_remove_service_auction_remove_service_car_and_more.py  0007_remove_order_name.py  0008_rename_is_finished_auction_is_company_chosen_and_more.py  0009_rename_timer_end_auction_datetime_end_and_more.py  0010_rename_date_started_order_datetime_start_and_more.py  0011_alter_order_company_delete_company.py  0011_remove_order_auction_remove_order_company_and_more.py  0012_delete_company.py  0012_rename_is_company_chosen_auction_is_ended_and_more.py  0013_company_representative.py  0013_order_offer.py  0014_company_services_user_first_name_user_last_name_and_more.py
apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
auctions/: admin.py  forms.py  models.py  urls.py  views.py
autoapp/: asgi.py  settings.py  urls.py  wsgi.py
companies/: admin.py  models.py
dashboard/: views.py
offers/: forms.py  urls.py  views.py
project/: settings.py  urls.py
static/: base.css  timer.js
templates/: account.html  auction_list.html  auth.html  base.html  car.html  car_create.html  car_service.html  create_account.html  index.html  logout.html  order_list.html  password_change.html
(+48 files in other folders)
