[tool.poetry]
name = "autoapp-django"
version = "0.1.0"
description = ""
authors = ["Dmitry Kuzminov <kuzminovdmit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
